# jarvis

./: .gitignore  README.md  dagger.json  docker-compose.yaml  go.mod  go.sum
.github/workflows/: build-console.yaml  build-provocateur.yaml  build-router.yaml  ci-android.yml  ci-termux.yml  ci-training.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
apps/jarvis/: kustomization.yaml
apps/jarvis-console/: Dockerfile  README.md  deployment.yaml  ingress.yaml  kustomization.yaml  package-lock.json  package.json  service.yaml
apps/jarvis-console/app/: page.tsx
clusters/np-home-homelab/: jarvis.yaml
cmd/jarvis/: main.go  tofu.go
dagger/tofu/: main.go
deploy/: Dockerfile
docs/: architecture.md  how-to.md  kpis.md  next-steps.md  phase-0-bringup.md  phase-1-architecture.md  plan.md  prompt-review-1.2.txt  status.md
infrastructure/components/nats/: deployment.yaml  service.yaml
infrastructure/components/qdrant/: deployment.yaml  service.yaml
internal/agent/: agent.go
internal/config/: config.go
internal/dagger/: dagger_client.go  executor.go
internal/k9s/: bridge.go
internal/lxc/: runner.go
internal/secrets/: op.go
jarvis-onepager/: .gitignore  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
jarvis-onepager/print/: build.sh  index.html  print.css
jarvis-onepager/scripts/: export-svg.mjs
jarvis-onepager/shared/: architecture.tsx  content.ts  package.json  tokens.ts  tsconfig.json
jarvis-onepager/slide/: export-pptx.py  index.html  slide.css
jarvis-onepager/web/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
pkg/k8s/: tool.go
scripts/: phase-0-verify.sh  phase-1-smoke-test.sh
services/provocateur-interviewer/: Dockerfile  README.md  deployment.yaml  ingress.yaml  pyproject.toml
services/provocateur-interviewer/app/: main.py
services/provocateur-interviewer/app/background/: __init__.py  provocateur.py
services/provocateur-interviewer/app/core/: gemini.py  messaging.py  qdrant.py
services/provocateur-interviewer/app/realtime/: interviewer.py
services/provocateur-interviewer/tests/: test_service.py
services/router/: Dockerfile  README.md  cnpg-cluster.yaml  deployment.yaml  kustomization.yaml  pyproject.toml  service.yaml
services/router/app/: main.py
services/router/app/api/: api.py
services/router/app/api/endpoints/: chat.py  dashboard.py
services/router/app/core/: config.py  router.py
services/router/app/db/: models.py  session.py
services/router/app/schemas/: metric.py
services/router/app/services/: lemonade.py  observer.py
termux/: README.md  build-llama.sh  run-mid-tier.sh  taskset-wrapper.sh
test/: functional_test.go
training/: Makefile  README.md  pyproject.toml
training/jarvis_training/: __init__.py  intents.py
training/jarvis_training/convert/: __init__.py  cli_convert_ptq.py  to_litert_ptq.py
training/jarvis_training/synth/: __init__.py  cli_generate.py  cli_validate.py  gemini_client.py  generate.py  prompt_builder.py  validate.py  vault_loader.py
training/jarvis_training/train/: __init__.py  cli_train.py  data.py  model.py  train.py
training/tests/: conftest.py  test_convert_metadata.py  test_gemini_client.py  test_generate.py  test_intents.py  test_prompt_builder.py  test_train_data.py  test_validate.py  test_vault_loader.py
(+57 files in other folders)
