[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-training"
version = "0.1.0"
description = "Jarvis Phase 1 intent-router training pipeline: vault → Gemini synth → MobileBERT → LiteRT."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jarvis" }]
dependencies = [
    # 1.2 — synthetic data pipeline
    # The Gemini SDK is intentionally NOT added until the 1.2 prompt review gate
    # is cleared. Until then generate.py uses a Protocol that tests mock.

    # Shared
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]
# 1.3 — fine-tune. Heavy; only install on the training host, not in CI lint job.
train = [
    "tensorflow>=2.16",
    "tf-keras>=2.16",
    "transformers>=4.40",
    "datasets>=2.20",
    "scikit-learn>=1.5",
    "tokenizers>=0.19",
]
# 1.4 — LiteRT conversion
convert = [
    "ai-edge-litert>=1.0.0",
]
# 1.2 — Gemini client. Cleared the prompt-review gate; google-genai is the
# unified SDK used by jarvis_training.synth.gemini_client.
gemini = [
    "google-genai>=0.7",
]

[tool.setuptools.packages.find]
include = ["jarvis_training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # bugbear
    "SIM",          # simplify
    "RUF",          # ruff-specific
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
