[project]
name = "provocateur-interviewer"
version = "0.1.1"
description = "Jarvis service for background knowledge refinement and real-time interviewing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "qdrant-client>=1.7.0",
    "nats-py>=2.7.0",
    "google-generativeai>=0.3.2",
    "gitpython>=3.1.41",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
