[tool.poetry]
name = "intelligent-burst-router"
version = "0.1.0"
description = "Intelligent Burst Router for Jarvis - Routes traffic between Lemonade (Local) and Cloud based on TTFT and Capacity."
authors = ["Jarvis Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-multipart = "^0.0.7"
# For GitHub OAuth if needed, or just use httpx directly
authlib = "^1.3.0"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
